2008-05-05  Michael Natterer  <mitch@imendio.com>

	* Makefile.am. build with G_DISABLE_SINGLE_INCLUDES to prevent
	code from being checked in that breaks the build of applications
	which use G_DISABLE_SINGLE_INCLUDES.

	* makegioalias.pl: make the alias file include "glib.h" instead of
	"glibconfig.h".

	* gio.symbols: whitespace change to force regeneration of the
	alias file after above script change.

	* gfileinfo.h: remove inlcusion of <glib/gfileutils.h>.

	* gfilenamecompleter.c: remove inclusion of "gurifuncs.h".

	* gioerror.h: #include <glib.h> instead of <glib/gerror.h>.

	* glocalfileinfo.c: remove inclusion of <glib/gchecksum>.

2008-04-28  David Zeuthen  <davidz@redhat.com>

	* gunixmounts.c (g_unix_mount_guess_should_display): Avoid
	displaying mounts in a subdirectory not accessible to the
	user (#526320).

2008-04-22  Michael Natterer  <mitch@imendio.com>

	* Makefile.am: fix library versioning (it was 0.0.0).

2008-04-21  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/fen-data.c, fen/fen-helper.c, fen/fen-missing.c, fen/fen-node.c:
	Default disable all loggings.
	* fen/fen-kernel.c: (printevent), (port_add_kevent),
	(port_fetch_event_cb): Fixed two macro nits.

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	* xdgmime/xdgmime.c: Rework the timestamp checking code
	to protect against duplicate directories in XDG_DATA_DIRS.
	Fixes fd.o bug 12513, reported by Joe Shaw.

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	Partically revert the last commit after realizing that
	xdg_mime_media_type_equal doesn't have to init at all.

	* xdgmime/xdgmime.h:
	* xdgmime/xdgmime.c: Get rid of _xdg_mime_media_type_equal

	* xdgmime/xdgmimecache.c: Use xdg_mime_media_type_equal

2008-04-16  Matthias Clasen  <mclasen@redhat.com>

	Avoid possible memory corruption in xdgmime, fd.o bug 12512,
	reported by Joe Shaw and Federico Mena Quintero.

	* xdgmime/xdgmime.c(_xdg_mime_media_type_equal): Implement.
	(xdg_mime_media_type_equal): Turn into a wrapper around the 